Wrote up section on "A Core Language"

--- a/TypeCheckerGenerator/latex/Context.tex
+++ b/TypeCheckerGenerator/latex/Context.tex
@@ -46,6 +46,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaFunction{Context}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -253,4 +254,4 @@
 \\
 \>[0]\AgdaComment{-- contexts using 'Thinning.lookup'}\<%
 \end{code}
-
+}
