--- a/TypeCheckerGenerator/latex/Expression.tex
+++ b/TypeCheckerGenerator/latex/Expression.tex
@@ -71,6 +71,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
 \\
@@ -797,14 +798,14 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaGeneralizable{p}\AgdaSpace{}%
 \AgdaGeneralizable{d}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
@@ -821,6 +822,10 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗sub\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaGeneralizable{δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇒[}}\AgdaSpace{}%
 \AgdaFunction{Expr}\AgdaSpace{}%
@@ -828,10 +833,6 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaInductiveConstructor{compu}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\AgdaSpace{}%
 \AgdaGeneralizable{γ}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Scope}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
@@ -854,8 +855,8 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{\{}\AgdaArgument{γ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaBound{δ'}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{⟨sub}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{T}\AgdaSpace{}%
@@ -872,19 +873,19 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaOperator{\AgdaFunction{◃}}\AgdaSpace{}%
 \AgdaBound{γ}\AgdaSymbol{)}\<%
 \\
-\>[0]\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\>[0]\AgdaBound{δ'}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
-\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
-\AgdaBound{δ'}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{-,}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{δ'}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{δ'}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -894,9 +895,9 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{`}\AgdaSpace{}%
 \AgdaBound{x}\<%
@@ -905,111 +906,108 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∙}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{t}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{bind}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{bind}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{thunk}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{thunk}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{const}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaArgument{δ}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}%
-\>[39]\AgdaBound{γ}%
-\>[42]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{ξ}\AgdaSpace{}%
+\>[34]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗svar}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{ξ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{/}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{σ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗sub}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{σ}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{var}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{var}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗var}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{x}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{elim}\AgdaSpace{}%
 \AgdaBound{e}\AgdaSpace{}%
-\AgdaBound{s}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{γ}%
+\AgdaBound{s}\AgdaSymbol{)}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{elim}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{e}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{s}\AgdaSpace{}%
+\AgdaBound{e}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{s}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⊗expr\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{d}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{compu}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{γ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{T}\AgdaSymbol{)}%
-\>[31]\AgdaBound{γ}%
 \>[34]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊗expr}}\AgdaSpace{}%
-\AgdaBound{γ}\AgdaSymbol{)}\<%
+\AgdaBound{T}\AgdaSymbol{)}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -1102,7 +1100,7 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaSymbol{=}%
-\>[765I]\AgdaKeyword{let}\AgdaSpace{}%
+\>[769I]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaBound{σpenv}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{helper}\AgdaSpace{}%
@@ -1110,7 +1108,7 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaKeyword{in}\<%
 \\
-\>[.][@{}l@{}]\<[765I]%
+\>[.][@{}l@{}]\<[769I]%
 \>[4]\AgdaKeyword{let}\AgdaSpace{}%
 \AgdaBound{thingy}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1243,3 +1241,4 @@ Expression γ = ∀ \{δ\} \{p : Pattern δ\} \{d\} → Expr p d γ-\}}\<%
 \AgdaBound{penv}\AgdaSpace{}%
 \AgdaBound{T}\<%
 \end{code}
+}
