--- a/TypeCheckerGenerator/latex/Failable.tex
+++ b/TypeCheckerGenerator/latex/Failable.tex
@@ -1,5 +1,6 @@
 \section{Failable}
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Failable}\AgdaSpace{}%
@@ -111,3 +112,4 @@
 \AgdaInductiveConstructor{succeed}\AgdaSpace{}%
 \AgdaBound{a}\<%
 \end{code}
+}
