--- a/TypeCheckerGenerator/latex/Opening.tex
+++ b/TypeCheckerGenerator/latex/Opening.tex
@@ -25,6 +25,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaComment{-- scoped things can are openable}\<%
 \\
@@ -54,3 +55,4 @@
 \AgdaOperator{\AgdaPrimitive{+}}\AgdaSpace{}%
 \AgdaBound{δ}\AgdaSymbol{)}\<%
 \end{code}
+}
