--- a/TypeCheckerGenerator/latex/Parser.tex
+++ b/TypeCheckerGenerator/latex/Parser.tex
@@ -1,7 +1,9 @@
 \section{Parsing from Files}
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Parser}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
+}
