--- a/TypeCheckerGenerator/latex/Rules.tex
+++ b/TypeCheckerGenerator/latex/Rules.tex
@@ -13,6 +13,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -1311,3 +1312,4 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Rules}\<%
 \end{code}
+}
