--- a/TypeCheckerGenerator/latex/Substitution.tex
+++ b/TypeCheckerGenerator/latex/Substitution.tex
@@ -31,6 +31,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
 \\
@@ -195,4 +196,4 @@
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{σ'}\<%
 \end{code}
-
+}
