--- a/TypeCheckerGenerator/latex/TermSubstitution.tex
+++ b/TypeCheckerGenerator/latex/TermSubstitution.tex
@@ -1,6 +1,6 @@
 \section{Term Substitution}
 
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{TermSubstitution}\AgdaSpace{}%
@@ -8,7 +8,7 @@
 \end{code}
 }
 
-\hide
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -44,6 +44,7 @@
 \end{code}
 }
 
+\hide{
 \begin{code}%
 \>[0]\AgdaKeyword{private}\<%
 \\
@@ -318,4 +319,4 @@
 \AgdaOperator{\AgdaFunction{/term}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}\<%
 \end{code}
-
+}
