--- a/TypeCheckerGenerator/latex/Thinning.tex
+++ b/TypeCheckerGenerator/latex/Thinning.tex
@@ -1,5 +1,6 @@
-⊗\section{Thinnings}
+\section{Thinnings}
 
+\hide{
 \begin{code}%
 \>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}\AgdaSpace{}%
@@ -350,9 +351,9 @@
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaBound{θ}\<%
 \\
-\>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
-\AgdaInductiveConstructor{ε}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\>[0]\AgdaFunction{++-identityʳ}%
+\>[14]\AgdaInductiveConstructor{ε}%
+\>[19]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\<%
 \\
 \>[0]\AgdaFunction{++-identityʳ}\AgdaSpace{}%
@@ -1141,3 +1142,4 @@
 \AgdaBound{⟨T}\AgdaSpace{}%
 \AgdaBound{x}\<%
 \end{code}
+}
