--- a/TypeCheckerGenerator/latex/TypeChecker.tex
+++ b/TypeCheckerGenerator/latex/TypeChecker.tex
@@ -1,5 +1,6 @@
 \section{Checking Types}
 
+\hide{
 \begin{code}%
 \>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}\AgdaSpace{}%
@@ -1611,3 +1612,4 @@
 \AgdaOperator{\AgdaFunction{≡ᵗ}}\AgdaSpace{}%
 \AgdaBound{T}\<%
 \end{code}
+}
